Changed the name of Test.html to ATEP.html, and the name of the welcome in the web.xml file to ATEP.html as well.

--- a/ATEP/war/WEB-INF/web.xml
+++ b/ATEP/war/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>Test.html</welcome-file>
+    <welcome-file>ATEP.html</welcome-file>
   </welcome-file-list>
 
 </web-app>
