--- a/ATEP/.settings/com.google.gdt.eclipse.core.prefs
+++ b/ATEP/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
+#Thu Apr 26 11:59:35 CDT 2012
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-warSrcDir=
+warSrcDir=war
 warSrcDirIsOutput=true
