--- a/ATEP Web App/war/WEB-INF/web.xml
+++ b/ATEP Web App/war/WEB-INF/web.xml
@@ -7,13 +7,13 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>edu.gac.ATEP.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>assessmentStoreServlet</servlet-name>
+    <servlet-class>edu.gac.ATEP.server.AssessmentStoreImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/atep_web_app/greet</url-pattern>
+    <servlet-name>assessmentStoreServlet</servlet-name>
+    <url-pattern>/atep_web_app/AssessmentStore</url-pattern>
   </servlet-mapping>
   
   <!-- Default page to serve -->
