Altered AssessmentStore to AssessmentTempStore and added StudentStore. We will now be able to store students along with their list of assessments in one location, while storing the assessment templates in a separate location

--- a/ATEP Web App/war/WEB-INF/web.xml
+++ b/ATEP Web App/war/WEB-INF/web.xml
@@ -7,14 +7,25 @@
 
   <!-- Servlets -->
   <servlet>
-    <servlet-name>assessmentStoreServlet</servlet-name>
-    <servlet-class>edu.gac.ATEP.server.AssessmentStoreImpl</servlet-class>
+    <servlet-name>assessmentTempStoreServlet</servlet-name>
+    <servlet-class>edu.gac.ATEP.server.AssessmentTempStoreImpl</servlet-class>
+  </servlet>
+    <servlet>
+    <servlet-name>StudentStoreServlet</servlet-name>
+    <servlet-class>edu.gac.ATEP.server.StudentStoreImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>assessmentStoreServlet</servlet-name>
-    <url-pattern>/atep_web_app/AssessmentStore</url-pattern>
+    <servlet-name>assessmentTempStoreServlet</servlet-name>
+    <url-pattern>/atep_web_app/assessmentTempStore</url-pattern>
+    </servlet-mapping>
+    
+    
+    <servlet-mapping>
+    <servlet-name>StudentStoreServlet</servlet-name>
+    <url-pattern>/atep_web_app/StudentStore</url-pattern>
   </servlet-mapping>
+  
   
   <!-- Default page to serve -->
   <welcome-file-list>
